--- a/src/resources/views/user/cart.hbs
+++ b/src/resources/views/user/cart.hbs
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-  <link rel="stylesheet" href="./css/animate.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/655396e8e6.js" crossorigin="anonymous"></script>
-
-  <title>Bag - Medical</title>
-</head>
-
-<body>
-{{>header}}
-      <div class="container" style="padding-top:80px"> 
-        <div class="row">
-           {{#each carts.products}} 
-      
-     <div class="card col s4 m4" style="display:flex;height:24%">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="../uploads/{{this.image}}" style="height:100%">
-    </div>
-    <div class="card-content" style="">
-      <a href="/cart/delete/{{this._id}}">remove</a>
-      <span class="card-title activator grey-text text-darken-4">{{this.product_name}}<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">{{this.unit_price}} $</a></p>
-      <form action="/cart/updateQty/{{this._id}}" Method="POST">
-
-       <input id="quantity" type="number" required=required class="validate" min="0" max="1000"name="quantity" value="{{this.quantity}}">
-          <label for="quantity">Quantity</label>
-            <button type="submit" >update</button>
-      </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <link rel="stylesheet" href="./css/animate.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/655396e8e6.js" crossorigin="anonymous"></script>
+    <title>Bag - Medical</title>
+  </head>
+  <body>
+    {{>header}}
+      <main id="main" class="subpage-main">
+        <div class="container cart-container""> 
+          <h2 class="title">Review your cart</h2>
+          <h4 class="subtitle">Free delivery and free returns.</h4>
+          <div class="row">
+            {{#each carts.products}} 
+              <div class="card col s12 m12">
+                <div class="card-image">
+                  <img class="activator" src="../uploads/{{this.image}}">
+                </div>
+                <div class="card-content">
+                  <span class="card-title">{{this.product_name}}</span>
+                  <form class="card-quantity" action="/cart/updateQty/{{this._id}}" Method="POST">
+                    <input style="text-align: center;" onchange="this.form.get('quantity').value > 0 ? this.form.submit()" id="quantity" type="number" required=required class="validate" min="1" max="1000" name="quantity" value="{{this.quantity}}">
+                      {{!-- <div class="btns-container">
+                        <button class="btn btn-active" type="submit" >Update</button>
+                      </div> --}}
+                  </form>
+                  <span id="originalPrice" class="card-price">{{formatCurrency this.unit_price}}</span>
+                  <span id="discountedAmount" class="card-discount">5%</span>
+                  <a onclick="M.toast({html: 'Item has been removed!'})" href="/cart/delete/{{this._id}}">Remove</a>
+                </div>
+                
+              </div>
+              {{else}}
+                <div class="center">
+                  <h5 class="center">Your cart is empty</h5>
+                  <a href="./product_view.hbs" class="btn btn-active">Explore our products</a>
+                </div>
+            {{/each}}
+            </div>
+            <hr />
+            <div class="row">
+              <h5 class="subtotal"><span>Subtotal</span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
+              <h4 class="total"><span>Total</span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
+              <div style="margin-top: 20px; text-align: right;">
+                <a class="btn btn-active">Continue to checkout</a>
+              </div>
+            </div>
         </div>
-  
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-    </div>
-  </div>
-    {{else}}
-    <h5 class="center">Cart Empty</h5>
-    {{/each}}
-    
-        </div>
-
-        <div class="row">
-          <h5>Total Price : {{session.cart.totalPrice}}</h5>
-          <a class="waves-effect waves-light btn">check out</a>
-          </div>
-            
-      </div>
-    
-{{>footer}}
-  <script src="./script/main.js"></script>
-</body>
-
+      {{>footer}}
+    </main>
+    <script src="./script/main.js"></script>
+  </body>
 </html>
