--- a/src/resources/views/admin/error_view.hbs
+++ b/src/resources/views/admin/error_view.hbs
@@ -13,7 +13,9 @@
 </script>
   
       <table class="centered responsive-table right highlight " >
+              
                 <h4 class="center">{{{message}}}</h4>
+                <img src="https://storyset.com/images/404/1.svg" alt="">
          </table> 
          
          
