--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -21,11 +21,24 @@
   </div>
   <div class="right">
     <a href="#" class="nav-link material-icons"> search </a>
-    {{!-- <a href="/cart" id="cart-btn" class="nav-link material-icons">
+    {{! <a href="/cart" id="cart-btn" class="nav-link material-icons">
       shopping_bag
-    </a> --}}
-    <a href="/cart" id="cart-btn" class="nav-link material-icons"> shopping_bag </a>
-     <span href="/auth" class="nav-link">{{session.cart.totalQty}}</span>
+    </a> }}
+    <a href="/cart" id="cart-btn" class="nav-link material-icons">
+      shopping_bag
+    </a>
+    <span
+      href="/auth"
+      class="nav-link"
+      style="position: relative;
+    right: 25px;
+    top: 8px;
+    left: 92x;
+    left: 615xpx;
+    border-radius: 27px;
+    height: -3%;
+    padding: 7px;"
+    >{{session.cart.totalProduct}}</span>
     <div class="auth_user" style="display: flex">
 
       {{#if author}}
