--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -89,7 +89,7 @@
                       </a>
 
                       <div class="btns-container">
-                        <a
+                        <a onclick="M.toast({html: 'Item has been put in the cart !', classes: 'rounded',displayLength:2000})"
                           href="/cart/{{{this._id}}}"
                           id="btn--add-to-cart"
                           class="btn-active btn"
