--- a/src/resources/views/user/product_detail.hbs
+++ b/src/resources/views/user/product_detail.hbs
@@ -19,20 +19,22 @@
                  </div>
             
                     <div class="btns-container">
-                        <a
-                          href="#"
+                        <a onclick="M.toast({html: 'Item has been put in the cart !', classes: 'rounded',displayLength:2000})"
+                          href="/cart/{{{this._id}}}"
                           id="btn--add-to-cart"
                           class="btn-active btn"
                         >Add to cart</a>
                         <a
-                          href="#modal_productDetail"
+                          href="#reviews"
                           id="btn--view-details"
                           class="btn-inactive btn waves-effect waves-light btn modal-trigger"
-                        >Buy now</a>
+                        >Reviews</a>
                       </div>
               </div>
          </div>
        </div>
+       <div id="reviews" class="">
+
        <div class="row">
          <div class="col s12 m12">
                 <div class="container_comment">          
@@ -110,6 +112,7 @@ Hello, I am Andrew Smith in this websites I purchased a product which is T-shirt
             </div>
         </div>
       </div>
+       </div>
      </div>
  
    
