--- a/src/resources/views/user/cart.hbs
+++ b/src/resources/views/user/cart.hbs
@@ -58,7 +58,7 @@
                      </div>
                    {{else}}
                       <div style="margin-top: 20px; text-align: right;">
-                <a href='/auth' class="btn btn-active">please sign in to checkout</a>
+                <a href='/auth' class="btn btn-active">Sign in to checkout</a>
                      </div>
                    {{/if}}
                   
