--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -159,7 +159,7 @@ body {
   min-height: 0;
 }
 .card {
-  min-height: 82vh;
+  /* min-height: 82vh; */
 }
 .form-group {
   margin: 0 0;
@@ -273,206 +273,6 @@ table {
 .Admin {
   display: none;
 }
-/* product */
-.products-container {
-  display: flex;
-}
-
-.products-container .left .card {
-  border-radius: 18px;
-  box-shadow: 2px 4px 12px rgb(0, 0, 0, 0.08) !important;
-  padding: 20px;
-}
-
-.products-outer-container {
-  /* background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.7) 0%,
-    rgba(245, 245, 247, 1) 30%
-  ); */
-  /* background: #000; */
-}
-
-@media only screen and (max-width: 1000px) {
-  .products-container {
-    display: inline-block;
-  }
-
-  .products-container .left {
-    width: 100%;
-  }
-
-  .products-container .right {
-    display: block;
-  }
-}
-
-.carousel-cell {
-  border-radius: 18px;
-  width: 28%;
-  height: 95%;
-  margin-right: 20px !important;
-  box-sizing: border-box;
-}
-
-.carousel {
-  display: block;
-  /* margin-bottom: 20px; */
-  height: 500px !important;
-}
-
-/* -------------- responsive --------------- */
-@media only screen and (max-width: 900px) {
-  .carousel-cell {
-    width: 100%;
-  }
-}
-/*  */
-/*! Flickity v2.2.2
-https://flickity.metafizzy.co
----------------------------------------------- */
-
-.flickity-enabled {
-  position: relative;
-}
-
-.flickity-enabled:focus {
-  outline: none;
-}
-
-.flickity-viewport {
-  overflow: hidden;
-  position: relative;
-  height: 100%;
-}
-
-.flickity-slider {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-/* draggable */
-
-.flickity-enabled.is-draggable {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.flickity-enabled.is-draggable .flickity-viewport {
-  cursor: move;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-}
-
-/* ---- flickity-button ---- */
-
-.flickity-button {
-  position: absolute;
-  background: hsla(0, 0%, 100%, 0.75);
-  border: none;
-  color: #333;
-}
-
-.flickity-button:hover {
-  background: white;
-  cursor: pointer;
-}
-
-.flickity-button:focus {
-  outline: none;
-  box-shadow: 0 0 0 5px #19f;
-}
-
-.flickity-button:active {
-  opacity: 0.6;
-}
-
-.flickity-button:disabled {
-  opacity: 0.3;
-  cursor: auto;
-  /* prevent disabled button from capturing pointer up event. #716 */
-  pointer-events: none;
-}
-
-.flickity-button-icon {
-  fill: currentColor;
-}
-
-/* ---- previous/next buttons ---- */
-
-.flickity-prev-next-button {
-  top: 50%;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  /* vertically center */
-  transform: translateY(-50%);
-}
-
-.flickity-prev-next-button.previous {
-  left: 10px;
-}
-.flickity-prev-next-button.next {
-  right: 10px;
-}
-/* right to left */
-.flickity-rtl .flickity-prev-next-button.previous {
-  left: auto;
-  right: 10px;
-}
-.flickity-rtl .flickity-prev-next-button.next {
-  right: auto;
-  left: 10px;
-}
-
-.flickity-prev-next-button .flickity-button-icon {
-  position: absolute;
-  left: 20%;
-  top: 20%;
-  width: 60%;
-  height: 60%;
-}
-
-/* ---- page dots ---- */
-
-.flickity-page-dots {
-  position: absolute;
-  width: 100%;
-  bottom: -25px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center;
-  line-height: 1;
-}
-
-.flickity-rtl .flickity-page-dots {
-  direction: rtl;
-}
-
-.flickity-page-dots .dot {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 0 8px;
-  background: #333;
-  border-radius: 50%;
-  opacity: 0.25;
-  cursor: pointer;
-}
-
-.flickity-page-dots .dot.is-selected {
-  opacity: 1;
-}
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
@@ -519,16 +319,6 @@ body {
 
 .material-icons {
   color: var(--primary-color);
-}
-
-.blur {
-  backdrop-filter: blur(12px) saturate(180%);
-  -webkit-backdrop-filter: blur(12px) saturate(180%);
-  background-color: rgb(255, 255, 255);
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: -99;
 }
 
 .container {
@@ -607,6 +397,28 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.navbar .right .nav-cart {
+  position: relative;
+  color: var(--primary-color);
+}
+
+.navbar .right .nav-cart .cart-bagde {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  /* padding: 3px; */
+  /* border-radius: 50%; */
+  width: 7px !important;
+  height: 7px !important;
+  padding: 0 !important;
+  display: block !important;
+}
+
+.navbar .right .auth_user .dropdown-trigger {
+  background: none !important;
+  box-shadow: none !important;
 }
 
 /* ------------------- HOMEPAGE ------------------------- */
@@ -892,29 +704,29 @@ section .more {
   display: block;
 }
 
+/* ---------------------- products carousel --------------- */
+
 .carousel {
-  display: block;
-  /* height: 500px !important; */
   height: 550px !important;
 }
 
-.carousel-cell {
+.carousel .carousel-cell {
   border-radius: 18px;
   width: 28%;
-  /* height: 95%; */
   margin-right: 20px !important;
   box-sizing: border-box;
-  height: 400px;
+  height: 535px !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.carousel-cell .card-content {
+.carousel .carousel-cell .card-content {
   height: 225px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  object-fit: cover;
 }
 
 .carousel-cell .card-content .card-tag {
@@ -924,7 +736,9 @@ section .more {
 .carousel-cell .card-image {
   width: 100%;
   height: 200px;
+  max-width: 100%;
   aspect-ratio: auto 100% / 200;
+  object-fit: cover;
 }
 
 .carousel-cell .card-image img {
@@ -932,8 +746,17 @@ section .more {
 
 .carousel-cell .btns-container {
   justify-self: flex-end !important;
-  margin-bottom: 0 !important;
+  margin-bottom: 0px !important;
 }
+
+/* -------------- responsive --------------- */
+@media only screen and (max-width: 900px) {
+  .carousel-cell {
+    width: 100%;
+  }
+}
+
+/* --- articles ----- */
 
 .articles-section {
   margin-top: 50px;
@@ -1077,6 +900,30 @@ section .more {
 }
 
 /* ---------------------------- PRODUCTS PAGE --------------------- */
+/* .products-container {
+  display: flex;
+}
+
+.products-container .left .card {
+  border-radius: 18px;
+  box-shadow: 2px 4px 12px rgb(0, 0, 0, 0.08) !important;
+  padding: 20px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .products-container {
+    display: inline-block;
+  }
+
+  .products-container .left {
+    width: 100%;
+  }
+
+  .products-container .right {
+    display: block;
+  }
+} */
+
 .products-container {
   display: flex;
 }
@@ -1087,8 +934,14 @@ section .more {
   padding: 20px;
 }
 
+.products-container .right {
+  width: 100%;
+}
+
 .products-container .right .card {
   height: 430px;
+  width: 300px;
+  max-width: 300px;
 }
 
 .products-container .right .card .card-content {
