--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -101,14 +101,15 @@
         </div>
           <section
           class="carousel js-flickity section-grid"
-          data-flickity='{ "groupCells": true }'
+          data-flickity='{ "groupCells": true, "selectedAttraction": 0.01, "friction": 0.15, "autoPlay": 2000 }'
           >
         {{#each products}}
-          <div class="carousel-cell card card_slide">
+
+          <div class="carousel-cell card card_slide ">
               <div class="card-image">
                 <img src="../uploads/{{{this.image}}}" />
               </div>
-            <a href="#" class="card-content">
+            <a href="/{{this.product_name}}" class="card-content">
               <span class="card-tag">10% off</span>
               <span class="card-title">{{this.product_name}}</span>
               <span class="card-brief">
@@ -129,7 +130,7 @@
       </section>
       <div class="container">
       <section class="products-section primary-color">
-          <h6 class="more"><a href="/products">Browse more...</a></h6>
+          <h6 class="more"><a href="./products.html">Browse more...</a></h6>
         </section>
         <section class="articles-section primary-color">
           <h2 class="title">Recent Articles</h2>
